Fix icon next to Resume in allthe pages menus

--- a/everwell-senior-solution/index.html
+++ b/everwell-senior-solution/index.html
@@ -30,9 +30,19 @@
           <li><a href="../#selected-work" class="active">Work</a></li>
           <li><a href="/about/">About</a></li>
           <li>
-            <a href="../assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer">
+            <a href="../assets/docs/Michelle_Pavlova_Resume_2025.pdf"
+              target="_blank" rel="noopener noreferrer"
+              class="menu__link menu__link--resume">
               Resume
-              <img src="../assets/icons/external-link.svg" alt="" class="icon" />
+              <svg class="icon" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                  aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10.6667 1.3335H14.6667V5.3335"
+                      stroke="currentColor" stroke-width="1.5"
+                      stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M7.33333 8.66683L14.6667 1.3335M14.6667 8.66683V14.6668H1.33333V1.3335H7.33333"
+                      stroke="currentColor" stroke-width="1.5"
+                      stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </a>
           </li>
         </ul>
@@ -68,7 +78,15 @@
         <li>
           <a href="../assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer" class="menu__link menu__link--resume">
             Resume
-            <img src="../assets/icons/external-link.svg" alt="" class="icon" />
+            <svg class="icon" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.6667 1.3335H14.6667V5.3335"
+                    stroke="currentColor" stroke-width="1.5"
+                    stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M7.33333 8.66683L14.6667 1.3335M14.6667 8.66683V14.6668H1.33333V1.3335H7.33333"
+                    stroke="currentColor" stroke-width="1.5"
+                    stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
           </a>
         </li>
       </ul>
@@ -835,15 +853,34 @@
           <h4 class="site-footer__heading">Contact</h4>
           <ul class="site-footer__list">
             <li>
-              <a href="https://www.linkedin.com/in/michellepavlova/" target="_blank" rel="noopener">
+              <a href="https://www.linkedin.com/in/michellepavlova/" target="_blank" rel="noopener noreferrer"
+                class="menu__link menu__link--resume">
                 LinkedIn
-                <img src="../assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
+                <svg class="icon" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                    aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M10.6667 1.3335H14.6667V5.3335"
+                        stroke="currentColor" stroke-width="1.5"
+                        stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M7.33333 8.66683L14.6667 1.3335M14.6667 8.66683V14.6668H1.33333V1.3335H7.33333"
+                        stroke="currentColor" stroke-width="1.5"
+                        stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
               </a>
             </li>
             <li>
-              <a href="../assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener">
+              <a href="../assets/docs/Michelle_Pavlova_Resume_2025.pdf"
+                target="_blank" rel="noopener noreferrer"
+                class="menu__link menu__link--resume">
                 Resume
-                <img src="../assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
+                <svg class="icon" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                    aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M10.6667 1.3335H14.6667V5.3335"
+                        stroke="currentColor" stroke-width="1.5"
+                        stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M7.33333 8.66683L14.6667 1.3335M14.6667 8.66683V14.6668H1.33333V1.3335H7.33333"
+                        stroke="currentColor" stroke-width="1.5"
+                        stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
               </a>
             </li>
           </ul>
