WIP: About page. Did the hero section, added 6 first cards

--- a/about/index_before.html
+++ b/about/index_before.html
@@ -15,12 +15,6 @@
 	</script>
 
 	<link rel="icon" type="image/svg+xml" href="../favicon.svg">
-
-	 <!-- Google Fonts: Caveat -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
-
     <link rel="stylesheet" href="../styles/reset.css" />
     <link rel="stylesheet" href="../styles/style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/qgp2tae.css" />
@@ -28,7 +22,7 @@
 
   <body>
     <!-- Header -->
-    <header class="site-header site-header-about reveal">
+    <header class="site-header reveal">
 		<div class="container">
 			<a href="/" class="logo">Michelle Pavlova</a>
 			<nav class="site-nav">
@@ -103,164 +97,106 @@
 		</nav>
 	</aside>
 
-	<main class="about-page">
+	<main>
 		<!-- About Section -->
-	<section class="about-hero">
-  <div class="container about-hero__content">
-    <div class="about-hero__text-block">
-      <h1 class="about-hero__heading">Hello again! I’m Michelle.</h1>
 
-      <p class="about-hero__intro">
-        <strong>Product Designer</strong> based near Vancouver, BC, with four years of experience crafting digital products for consumers and B2B.
-      </p>
-    </div>
-
-    <div class="about-hero__image-block">
-      <!-- Decorative flowers -->
-      <img 
-        src="../assets/icons/flower_red.svg" 
-        alt="" 
-        class="about-hero__flower about-hero__flower--left"
-      />
-      <img 
-        src="../assets/icons/flower_blue.svg" 
-        alt="" 
-        class="about-hero__flower about-hero__flower--right"
-      />
-
-      <!-- Portrait -->
-      <img
-        id="portrait"
-        src="../assets/images/portrait.jpg"
-        alt="Portrait of Michelle Pavlova"
-        class="about-hero__image"
-      />
-
-      <p class="about-hero__caption">
-        Fashion is one of my favourite hobbies – click on my photo to see a random look I’ve styled!
-      </p>
-    </div>
-  </div>
-</section>
-
-
-	<section class="about-grid section-padding">
-    <div class="container about-grid__container">
-			<div class="about-cards-row">
-				<!-- 1 -->
-				<article class="about-card">
-					<img
-						src="../assets/icons/about_icon_card1.svg"
-						alt=""
-						class="about-card__icon"
-						
+		<section class="about-hero">
+			<div class="container about-hero__content">
+				
+				<div class="about-hero__image-block">
+					<img 
+						id="portrait"
+						src="../assets/images/portrait.jpg" 
+						alt="Portrait of Michelle Pavlova" 
+						class="about-hero__image"
 					/>
-					<h3 class="about-card__title">
-						I specialize in navigating complexity and ambiguity
-					</h3>
-					<p class="about-card__text">
-						to create intuitive, inclusive, and high-impact solutions. After several years
-						in Health Tech, I’m excited to explore new industries where thoughtful design
-						can make a difference.
+					<p class="about-hero__caption">
+						Fashion is one of my favourite hobbies – click on my photo to see a random look I’ve styled!
 					</p>
-				</article>
-					<!-- 1 -->
-				<article class="about-card">
-					<div class="about-card__icon">💫</div>
-					<h3 class="about-card__title about-card__title-non-bold">
-						Some of my favourite things are:
-					</h3>
-					<ul class="noMgn">
-						<li class="about__card-li">accessibility</li>
-						<li class="about__card-li">collaboration</li>
-						<li class="about__card-li">continuous learning</li>
-						<li class="about__card-li">visual polish</li>
-					</ul>
-				</article>
-			</div>
-			<div class="about-cards-row">
-				<!-- 3 -->
-				<article class="about-card">
-					<div class="about-card__icon">👧</div>
-					<h3 class="about-card__title">
-						My design journey started when I was a little girl who wanted to create websites about Disney princesses.
-					</h3>
-					<p class="about-card__text">
-						I wasn’t allowed much screen time, so I drew each page on paper and asked people to “click” on links by turning to the next sheet. I didn’t know it then, but I was doing paper prototyping. I’ve been hooked on creating digital experiences ever since!
-					</p>
-				</article>
-				<!-- 4 -->
-				<article class="about-card">
-					<img
-						src="../assets/icons/wheel.svg"
-						alt=""
-						class="about-card__icon"
-					/>
-					<h3 class="about-card__title">
-						Today, I still bring that same joy, curiosity, and heart to my work
-					</h3>
-					<p class="about-card__text">
-						along with a structured, systems-minded approach shaped by my Illustration Honours degree and deepened through my work in product teams. 
-					</p>
-					<div class="about-card-additional-stuff">
-						<p class="about-card__text-decor">
-							I bring a little bit of whimsy too!
-						</p>
-						 <img
-							src="../assets/images/about_card_4_cat.png"
-							alt="Photo of Michelle's cat Aloy"
-							class="about-card__decor"
-						/>
-					</div>
-				</article>
-			</div>
-			<div class="about-cards-row">
-				<!-- 5 — split horizontal card -->
-				<div class="about-card about-card--split reveal">
-					<article class="about-card about-card--mini">
-						<div class="about-card__icon">📧</div>
-						<h3 class="about-card__title">Say hi!</h3>
-						<a href="mailto:hi@michelledesign.ca" class="about-card__link">hi@michelledesign.ca</a>
-					</article>
-					<article class="about-card about-card--mini about-card--linkedin">
-						<img src="../assets/icons/linketInBig.svg" alt="LinkedIn logo" />
-					</article>
 				</div>
-					<!-- 6 -->
-				<article class="about-card">
-					<div class="about-card__icon">✨</div>
-					<h3 class="about-card__title">
-						I use AI in my work as a creative partner
-					</h3>
-					<p class="about-card__text">
-						not a replacement of a human touch. It allows me to speed up research and exploration and iterate on copy, but I always make sure each and every output is well-considered. No shortcuts!
+
+				<div class="about-hero__text-block">
+					<h1 class="about-hero__heading">Hello again! I’m Michelle.</h1>
+
+					<p class="about-hero__intro">
+						Product Designer based near Vancouver, BC, with four years of experience crafting digital products for consumers and B2B.
 					</p>
-				</article>
+
+					<div class="about-hero__paragraphs">
+
+						<div class="about-hero__item">
+							<div class="about-hero__icon">💫</div>
+							<p class="about-hero__text">
+								<strong>I specialize in navigating complexity and ambiguity</strong>
+								to create intuitive, inclusive, and high-impact solutions. After several years in Health Tech, I’m excited to explore new industries where thoughtful design can make a difference.
+							</p>
+						</div>
+
+						<div class="about-hero__item">
+							<div class="about-hero__icon">👧</div>
+							<p class="about-hero__text">
+								<strong>My design journey started when I was a little girl</strong>
+								who wanted to create websites about Disney princesses. I wasn’t allowed much screen time, so I drew each page on paper and asked people to “click” on links by turning to the next drawing. I didn’t know it then, but I was doing paper prototyping. I’ve been hooked on creating digital experiences ever since!
+							</p>
+						</div>
+
+						<div class="about-hero__item">
+							<div class="about-hero__icon">🎨</div>
+							<p class="about-hero__text">
+								Today, I still bring that same <strong>joy, curiosity, and heart to my work, along with a structured, systems-minded approach</strong> shaped by my Illustration Honours degree and deepened through my work in product teams. Some of my favourite things are accessibility, collaboration, and continuous learning.
+							</p>
+						</div>
+
+						<div class="about-hero__item">
+							<div class="about-hero__icon">🐈</div>
+							<p class="about-hero__text">
+								<strong>When I’m not designing</strong>, I’m usually 
+								<span class="hover-preview">
+									<span class="hover-preview__text">out walking</span>
+									<img src="../assets/images/about_walking.png" alt="Me, on a walk" class="hover-preview__img">
+								</span> 
+								with a 
+								<span class="hover-preview">
+									<span class="hover-preview__text">matcha</span>
+									<img src="../assets/images/about_matcha.png" alt="Cup of matcha" class="hover-preview__img">
+								</span> 
+								(or hojicha, or chai…). I also love 
+								<span class="hover-preview">
+									<span class="hover-preview__text">thrifting</span>
+									<img src="../assets/images/about_thrifthing.png" alt="A thrift find" class="hover-preview__img">
+								</span>, 
+								<span class="hover-preview">
+									<span class="hover-preview__text">a plot-driven videogame</span>
+									<img src="../assets/images/about_videoGames.png" alt="A picture of Elly from The Last of Us" class="hover-preview__img">
+								</span>, 
+								and hanging out with my 
+								<span class="hover-preview">
+									<span class="hover-preview__text">very round British Shorthair</span>
+									<img src="../assets/images/about_cat.png" alt="A picture of my cat" class="hover-preview__img">
+								</span>.
+							</p>
+
+						</div>
+
+						<div class="about-hero__item">
+							<div class="about-hero__icon">📨</div>
+							<p class="about-hero__text">
+								<strong>Feel free to reach out</strong> at 
+								<a href="mailto:hi@michelledesign.ca" class="about-email">hi@michelledesign.ca</a> 
+								to talk about all things design or collaborate on a cool project together!
+							</p>
+						</div>
+
+					</div>
+
+				</div>
+
 			</div>
-
-
-      <!-- 7 -->
-      <article class="about-card reveal">
-        <div class="about-card__icon">✨</div>
-        <h3 class="about-card__title">I use AI in my work as a creative partner</h3>
-        <p>not a replacement of a human touch...</p>
-      </article>
-
-      <!-- 8 — carousel -->
-      <article class="about-card about-card--carousel reveal">
-        <div class="about-carousel">
-          <img src="../assets/images/about_carousel1.jpg" alt="drink" class="active" />
-          <img src="../assets/images/about_carousel2.jpg" alt="game" />
-          <img src="../assets/images/about_carousel3.jpg" alt="shirt" />
-        </div>
-      </article>
-
-    </div>
-  </section>
+		</section>
 	</main>
 
     <!-- Footer -->
-    <footer class="site-footer site-footer-about reveal">
+    <footer class="site-footer reveal">
   <div class="container site-footer__content">
 
     <div class="site-footer__left">
