--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <title>Michelle Pavlova's Portfolio</title>
+  
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-RRPWYEE236"></script>
   <script>
@@ -16,17 +17,20 @@
     gtag('config', 'G-RRPWYEE236');
   </script>
 
+  <link rel="icon" type="image/svg+xml" href="../favicon.svg">
   <link rel="preload"
       href="https://use.typekit.net/af/2547e5/00000000000000007736c70e/31/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3" 
       as="font"
       type="font/woff2"
       crossorigin
   >
-  <link rel="icon" type="image/svg+xml" href="../favicon.svg">
+  <!-- Handwriting accent font (for About page, global use) -->
   <link rel="stylesheet" href="https://use.typekit.net/qgp2tae.css">
+ 
 	<link rel="stylesheet" href="./styles/reset.css" />
   <link rel="stylesheet" href="./styles/style.css" />
   <link rel="stylesheet" href="../styles/home.css" />
+ 
 </head>
 <body class="home">
   <header class="site-header site-header-home reveal">
