WIP: working on the carousel in About page

--- a/about/index.html
+++ b/about/index.html
@@ -239,21 +239,49 @@
 			</div>
 
 
-      <!-- 7 -->
-      <article class="about-card reveal">
-        <div class="about-card__icon">✨</div>
-        <h3 class="about-card__title">I use AI in my work as a creative partner</h3>
-        <p>not a replacement of a human touch...</p>
-      </article>
+			<!-- 8 — carousel -->
+			<div class="about-row about-row--final">
+				<div class="container about-row__grid about-row__grid--split">
+					
+					<!-- LEFT COLUMN -->
+					<div class="about-col about-col--left">
+						<!-- Card 7.1 -->
 
-      <!-- 8 — carousel -->
-      <article class="about-card about-card--carousel reveal">
-        <div class="about-carousel">
-          <img src="../assets/images/about_carousel1.jpg" alt="drink" class="active" />
-          <img src="../assets/images/about_carousel2.jpg" alt="game" />
-          <img src="../assets/images/about_carousel3.jpg" alt="shirt" />
-        </div>
-      </article>
+						<article class="about-card reveal">
+							<img src="../assets/icons/star.svg" alt="" class="about-card__icon" width="100" height="100">
+							<h3 class="about-card__title">Currently...</h3>
+							<ul class="about-card__list">
+								<li><strong>Reading:</strong> <a href="#">Articulating Design Decisions</a></li>
+								<li><strong>Listening to:</strong> <a href="#">Honest UX talks</a> and <a href="#">The Life of a Showgirl</a></li>
+								<li><strong>Practicing:</strong> Adobe Illustrator, logo design, and French</li>
+							</ul>
+						</article>
+
+						<!-- Card 7.2 -->
+						<article class="about-card reveal">
+							<div class="about-card__icon">🐈</div>
+							<h3 class="about-card__title">When I’m not designing</h3>
+							<p class="about-card__text">
+								I’m usually out walking with a matcha (or hojicha, or chai...). I also love thrifting, 
+								a plot-driven videogame, and hanging out with my very round British Shorthair!
+							</p>
+						</article>
+    			</div>
+
+					<!-- RIGHT COLUMN: vertical slideshow -->
+					<!-- Card 8 -->
+					<div class="about-col about-col--right">
+						<div class="about-photo-slider">
+							<img src="../assets/images/about_walking.png" alt="" class="about-photo-slider__img active">
+							<img src="../assets/images/about_matcha.png" alt="" class="about-photo-slider__img">
+							<img src="../assets/images/about_thrifthing.png" alt="" class="about-photo-slider__img">
+							<img src="../assets/images/about_videoGames.png" alt="" class="about-photo-slider__img">
+							<img src="../assets/images/about_cat.png" alt="" class="about-photo-slider__img">
+						</div>
+					</div>
+				</div>
+			</div>
+
 
     </div>
   </section>
