WIP cards in About - the linkedin portion

--- a/about/index.html
+++ b/about/index.html
@@ -223,7 +223,7 @@
 						<a href="mailto:hi@michelledesign.ca" class="about-card__link">hi@michelledesign.ca</a>
 					</article>
 					<article class="about-card about-card--mini about-card--linkedin">
-						<img src="../assets/icons/linketInBig.svg" alt="LinkedIn logo" />
+						<img src="../assets/icons/linkedin-white.svg" alt="LinkedIn logo" class="linkedin-logo" />
 					</article>
 				</div>
 					<!-- 6 -->
@@ -329,6 +329,9 @@
 
   </div>
 </footer>
+ <button id="backToTop" class="back-to-top" aria-label="Back to top">
+    <svg viewBox="0 0 24 24" width="28" height="28"><path d="M12 19V5M5 12l7-7 7 7" stroke="white" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
+  </button>
 <script src="../scripts/main.js" defer></script>
 
   </body>
