--- a/about/index.html
+++ b/about/index.html
@@ -248,11 +248,42 @@
 						<!-- Card 7.1 -->
 
 						<article class="about-card reveal">
-							<img src="../assets/icons/star.svg" alt="" class="about-card__icon" width="100" height="100">
+							<img src="../assets/icons/star_sharp.svg" alt="" class="about-card__icon" width="100" height="100">
 							<h3 class="about-card__title">Currently...</h3>
 							<ul class="about-card__list">
-								<li><strong>Reading:</strong> <a href="#">Articulating Design Decisions</a></li>
-								<li><strong>Listening to:</strong> <a href="#">Honest UX talks</a> and <a href="#">The Life of a Showgirl</a></li>
+								<li>
+									<strong>Reading:</strong>
+									<a
+										class="currently__link"
+										href="https://www.oreilly.com/library/view/articulating-design-decisions/9781491921555/"
+										target="_blank"
+										rel="noopener noreferrer"
+									>
+										Articulating Design Decisions
+									</a>
+									</li>
+
+									<li>
+									<strong>Listening to:</strong>
+									<a
+										class="currently__link"
+										href="https://www.instagram.com/honest_ux_talks/?hl=en"
+										target="_blank"
+										rel="noopener noreferrer"
+									>
+										Honest UX talks
+									</a>
+									and
+									<a
+										class="currently__link"
+										href="https://open.spotify.com/album/1W57oNaAkGObOQKBTxg4e9"
+										target="_blank"
+										rel="noopener noreferrer"
+									>
+										The Life of a Showgirl
+									</a>
+									</li>
+
 								<li><strong>Practicing:</strong> Adobe Illustrator, logo design, and French</li>
 							</ul>
 						</article>
