WIP: Adaptive cards

--- a/about/index.html
+++ b/about/index.html
@@ -217,8 +217,8 @@
 			<div class="about-cards-row">
 				<!-- 5 — split horizontal card -->
 				<div class="about-card about-card--split reveal">
-					<article class="about-card about-card--mini">
-						<div class="about-card__icon">📧</div>
+					<article class="about-card about-card--mini about-card--mini-1">
+						<div class="about-card__icon about-card__icon-letter">📧</div>
 						<h3 class="about-card__title">Say hi!</h3>
 						<a href="mailto:hi@michelledesign.ca" class="about-card__link">hi@michelledesign.ca</a>
 					</article>
