fix(about): align final row width and restore LinkedIn at 600px
- preserve equal gutters across 600–1080px
- stack to one column at ≤600px without narrow last row
- bottom-align “whimsy” row

Follow-ups:
- polish mobile card paddings
- adjust script-line wrap spacing ≤600px

--- a/about/index.html
+++ b/about/index.html
@@ -241,7 +241,7 @@
 
 			<!-- 8 — carousel -->
 			<div class="about-row about-row--final">
-				<div class="container about-row__grid about-row__grid--split">
+				<div class="about-row__grid about-row__grid--split">
 					
 					<!-- LEFT COLUMN -->
 					<div class="about-col about-col--left">
