fix(about): force About-card icons to 100px at ≤600px
- standardize icon size across mobile cards
- include emoji/text icons (no <img>) via font-size:100px
- keep small nav/footer icons unaffected

--- a/about/index.html
+++ b/about/index.html
@@ -290,7 +290,7 @@
 
 						<!-- Card 7.2 -->
 						<article class="about-card reveal">
-							<div class="about-card__icon">🐈</div>
+							<div class="about-card__icon about-card__icon-invert">🐈</div>
 							<h3 class="about-card__title">When I’m not designing</h3>
 							<p class="about-card__text">
 								I’m usually out walking with a matcha (or hojicha, or chai...). I also love thrifting, 
