Add continuous rotation animation for flowers on About page

--- a/about/index.html
+++ b/about/index.html
@@ -148,7 +148,7 @@
     <div class="container about-grid__container">
 			<div class="about-cards-row">
 				<!-- 1 -->
-				<article class="about-card">
+				<article class="about-card fx-splash fx-corner-tr fx-shape-blob1">
 					<img
 						src="../assets/icons/about_icon_card1.svg"
 						alt=""
