Add external link icon to About page, italic fix, and adjust Selected Work size

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
           </div>
           <p class="hero__description reveal">
-            With experience across B2C, B2B, and SaaS projects and a visual media background, I design digital products that feel human, intuitive, and simple, even when the problems aren’t.
+            With experience across B2C, B2B, and SaaS projects and a visual media background, I design digital products that feel human, intuitive, and <em>simple</em>, even when the problems aren’t.
           </p>
         </div>
         <div class="hero__button-wrapper">
