Add a floating cursor, adjust its offset and muted inactive case hover effect

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           <!-- 😜 A Fourth new card: InterviewR -->
       <!-- Case1: everwell-PROMs-and-trends -->
         <article class="case-card reveal">
-          <!-- <a href="" class="case-card__link"> -->
+          <a href="#" class="case-card__link case-card__link--nonactive" aria-disabled="true"></a>
             <div class="case-card__inner">
 
               <!-- Left side -->
@@ -384,7 +384,7 @@
             </div>
 
             </div>
-          <!-- </a> -->
+          </a>
         </article>
         <!-- 😜 The end of the Fourth new card -->
 
@@ -392,6 +392,7 @@
     </div>
   </section>
   <div class="hero-spacer"></div>
+  <div class="cursor-label" id="cursor-label"></div>
 </main>
 
 
@@ -452,7 +453,7 @@
         </ul>
       </div>
     </div>
-
+    
   </div>
 </footer>
   <button id="backToTop" class="back-to-top" aria-label="Back to top">
