WIP: hovering animation in About pag

--- a/about/index.html
+++ b/about/index.html
@@ -247,7 +247,9 @@
         <div class="container about-grid__container">
           <div class="about-cards-row">
             <!-- 1 -->
-            <article class="about-card fx-splash fx-corner-tr fx-shape-blob1">
+            <article
+              class="about-card fx-corner-grow fx-color-red fx-shape-polygon5"
+            >
               <img
                 src="../assets/icons/about_icon_card1.svg"
                 alt=""
