Change photo in About page

--- a/about/index.html
+++ b/about/index.html
@@ -496,7 +496,7 @@
               <div class="about-col about-col--right">
                 <div class="about-photo-slider">
                   <img
-                    src="../assets/images/about_walking.png"
+                    src="../assets/images/about_walking.jpg"
                     alt=""
                     class="about-photo-slider__img active"
                   />
