feat(about): enable full-title hover highlight on all cards
- background-size animation, no line gaps
- global default color with row overrides
- reduced-motion safe; optional auto-wrap helper

--- a/about/index.html
+++ b/about/index.html
@@ -247,17 +247,18 @@
         <div class="container about-grid__container">
           <div class="about-cards-row">
             <!-- 1 -->
-            <article
-              class="about-card fx-corner-grow fx-color-red fx-shape-polygon5"
-            >
+            <article class="about-card fx-highlight">
               <img
                 src="../assets/icons/about_icon_card1.svg"
                 alt=""
                 class="about-card__icon"
               />
               <h3 class="about-card__title">
-                I specialize in navigating complexity and ambiguity
+                <span class="hi"
+                  >I specialize in navigating complexity and ambiguity</span
+                >
               </h3>
+
               <p class="about-card__text">
                 to create intuitive, inclusive, and high-impact solutions. After
                 several years in Health Tech, I’m excited to explore new
@@ -268,7 +269,7 @@
             <article class="about-card">
               <div class="about-card__icon">💫</div>
               <h3 class="about-card__title about-card__title-non-bold">
-                Some of my favourite things are:
+                <span class="hi">Some of my favourite things are:</span>
               </h3>
               <ul class="noMgn">
                 <li class="about__card-li">accessibility</li>
@@ -283,8 +284,10 @@
             <article class="about-card">
               <div class="about-card__icon">👧</div>
               <h3 class="about-card__title">
-                My design journey started when I was a little girl who wanted to
-                create websites about Disney princesses.
+                <span class="hi"
+                  >My design journey started when I was a little girl who wanted
+                  to create websites about Disney princesses.</span
+                >
               </h3>
               <p class="about-card__text">
                 I wasn’t allowed much screen time, so I drew each page on paper
@@ -301,8 +304,10 @@
                 class="about-card__icon"
               />
               <h3 class="about-card__title">
-                Today, I still bring that same joy, curiosity, and heart to my
-                work
+                <span class="hi"
+                  >Today, I still bring that same joy, curiosity, and heart to
+                  my work</span
+                >
               </h3>
               <p class="about-card__text">
                 along with a structured, systems-minded approach shaped by my
@@ -326,7 +331,9 @@
             <div class="about-card about-card--split reveal">
               <article class="about-card about-card--mini about-card--mini-1">
                 <div class="about-card__icon about-card__icon-letter">📧</div>
-                <h3 class="about-card__title">Say hi!</h3>
+                <h3 class="about-card__title">
+                  <span class="hi">Say hi!</span>
+                </h3>
                 <a href="mailto:hi@michelledesign.ca" class="about-card__link"
                   >hi@michelledesign.ca</a
                 >
@@ -343,7 +350,9 @@
             <article class="about-card">
               <div class="about-card__icon">✨</div>
               <h3 class="about-card__title">
-                I use AI in my work as a creative partner
+                <span class="hi"
+                  >I use AI in my work as a creative partner</span
+                >
               </h3>
               <p class="about-card__text">
                 not a replacement of a human touch. It allows me to speed up
@@ -368,7 +377,9 @@
                     width="100"
                     height="100"
                   />
-                  <h3 class="about-card__title">Currently...</h3>
+                  <h3 class="about-card__title">
+                    <span class="hi">Currently...</span>
+                  </h3>
                   <ul class="about-card__list">
                     <li>
                       <strong>Reading:</strong>
@@ -482,7 +493,9 @@
                 <!-- Card 7.2 -->
                 <article class="about-card reveal">
                   <div class="about-card__icon about-card__icon-invert">🐈</div>
-                  <h3 class="about-card__title">When I’m not designing</h3>
+                  <h3 class="about-card__title">
+                    <span class="hi">When I’m not designing</span>
+                  </h3>
                   <p class="about-card__text">
                     I’m usually out walking with a matcha (or hojicha, or
                     chai...). I also love thrifting, a plot-driven videogame,
