chore: replaced site favicon with new version

--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
       gtag("config", "G-RRPWYEE236");
     </script>
 
-    <link rel="icon" type="image/svg+xml" href="../favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="../favicon2.svg" />
 
     <!-- Google Fonts: Caveat -->
     <link
