--- a/everwell-PROMs-and-trends/index.html
+++ b/everwell-PROMs-and-trends/index.html
@@ -14,7 +14,7 @@
     gtag('config', 'G-RRPWYEE236');
   </script>
 
-	<link rel="icon" type="image/svg+xml" href="../favicon.svg">
+	<link rel="icon" type="image/svg+xml" href="../favicon2.svg">
   <link rel="stylesheet" href="https://use.typekit.net/qgp2tae.css" />
   <link rel="stylesheet" href="../styles/reset.css" />
   <link rel="stylesheet" href="../styles/style.css" />
@@ -181,7 +181,7 @@
           <div class="case-overview__description reveal">
             <h2 id="case-overview-title" class="case-overview__heading">Project overview</h2>
             <p class="case-overview__paragraph">
-              Everwell developed a digital platform to automate patient-reported data collection and help providers track health trends over time.  
+              Everwell developed a digital platform to <span class="hi hi--reveal">automate patient-reported data collection and help providers track health trends over time.</span>  
             </p>
             <p class="case-overview__paragraph">
               Once manual questions were with automated questionnaires and real-time insights, the questionnaire completion rates drastically grew and clinicians were able make faster, more informed decisions and deliver proactive care.
@@ -273,7 +273,7 @@
               <dt class="case-context__term">Key impact</dt>
               <dd class="case-context__desc">
                 <p class="reveal">With the new PROM workflows and visualization, clinicians could spot high-risk patients and overdue forms in a glance while patients received clear and approachable tasks.</p>
-                <p class="reveal">This shift directly boosted engagement, achieving<strong> a 98% patient completion rate (up from 20% with paper forms) and helping providers identify trends 60% faster.</strong></p>
+                <p class="reveal">This shift directly boosted engagement, achieving<span class="hi hi--reveal"><strong> a 98% patient completion rate (up from 20% with paper forms)</span> and helping providers <span class="hi hi--reveal">identify trends 60% faster.</strong></span></p>
               </dd>
             </div>
 
