--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -14,7 +14,7 @@
     gtag('config', 'G-RRPWYEE236');
   </script>
 
-  <link rel="icon" type="image/svg+xml" href="../favicon.svg">
+  <link rel="icon" type="image/svg+xml" href="../favicon2.svg">
   <link rel="stylesheet" href="https://use.typekit.net/qgp2tae.css" />
   <link rel="stylesheet" href="../styles/reset.css" />
   <link rel="stylesheet" href="../styles/style.css" />
