--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     gtag('config', 'G-RRPWYEE236');
   </script>
 
-  <link rel="icon" type="image/svg+xml" href="../favicon.svg">
+  <link rel="icon" type="image/svg+xml" href="../favicon2.svg">
   <link rel="preload"
       href="https://use.typekit.net/af/2547e5/00000000000000007736c70e/31/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3" 
       as="font"
