style(case): add global .case scope and responsive h2 typography (Campaign Serif 56px desktop)

--- a/everwell-PROMs-and-trends/index.html
+++ b/everwell-PROMs-and-trends/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="../styles/reset.css" />
   <link rel="stylesheet" href="../styles/style.css" />
 </head>
-<body>
+<body class="case">
   <header class="site-header">
     <div class="container">
       <a href="/" class="logo">Michelle Pavlova</a>
