--- a/everwell-senior-solution/index.html
+++ b/everwell-senior-solution/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="../styles/reset.css" />
   <link rel="stylesheet" href="../styles/style.css" />
 </head>
-<body>
+<body class="case">
   <!-- Header -->
   <header class="site-header reveal">
     <div class="container">
