--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="../styles/reset.css" />
   <link rel="stylesheet" href="../styles/style.css" />
 </head>
-<body>
+<body class="case">
   <!-- Header -->
   <header class="site-header reveal">
     <div class="container">
@@ -689,11 +689,11 @@
       <!-- Collaboration and what's next (reusable two-column pattern) -->
       <a id="nav-impact"></a>
       <!-- 🦊 -->
-       <section class="case-howmightwe reveal">
+       <section class="container case-howmightwe reveal">
         <h2 class="case-highlights__title case-highlights__title-no-top-margin">Project impact</h2>
 
         <!-- Development collaboration -->
-        <div class="container reveal">
+        <div class=" reveal">
           <div class="twocol add-big-margin-bottom">
             <h3 class="twocol__heading">Accuracy & adoption</h3>
             <div class="twocol__main">
@@ -701,7 +701,7 @@
             </div>
           </div>
         </div>
-        <div class="container reveal">
+        <div class="reveal">
           <div class="twocol add-big-margin-bottom">
             <h3 class="twocol__heading">Efficiency gains</h3>
             <div class="twocol__main">
@@ -709,7 +709,7 @@
             </div>
           </div>
         </div>
-        <div class="container reveal">
+        <div class="reveal">
           <div class="twocol">
             <h3 class="twocol__heading ">Design for scale and</br>inclusivity</h3>
             <div class="twocol__main">
@@ -723,11 +723,11 @@
       </section>
       <!-- 🦊end -->
        <a id="nav-learnings"></a>
-      <section class="case-howmightwe reveal">
+      <section class="container case-howmightwe reveal">
         <h2 class="case-highlights__title case-highlights__title-no-top-margin">Collaboration and what’s next</h2>
 
         <!-- Development collaboration -->
-        <div class="container reveal">
+        <div class="reveal">
           <div class="twocol">
             <h3 class="twocol__heading">Development<br>collaboration</h3>
             <div class="twocol__main">
@@ -762,7 +762,7 @@
           </div>
         </div>
         <!-- If continued -->
-        <div class="container  reveal">
+        <div class="reveal">
           <div class="twocol twocol--wide">
             <h3 class="twocol__heading">If continued…</h3>
             <div class="twocol__main">
@@ -807,7 +807,7 @@
           </div>
         </div>
         <!-- Impact and learnings -->
-        <div class="container  reveal">
+        <div class="reveal">
           <div class="twocol twocol--wide">
             <h3 class="twocol__heading">Learnings</h3>
             <div class="twocol__main">
